# schermanBeste

./: README.md
Bilderverwaltung2/: Bilderverwaltung.sln
Bilderverwaltung2/Bilderverwaltung/: Album.cs  App.xaml  App.xaml.cs  Bilderverwaltung.csproj  MainWindow.xaml  MainWindow.xaml.cs  Pic.cs
Bilderverwaltungsprogramm/: Bilderverwaltungsprogramm.sln
Bilderverwaltungsprogramm/Bilderverwaltungsprogramm/: App.xaml  App.xaml.cs  Bilderverwaltungsprogramm.csproj  CustomCommands.cs  CustomImage.cs  MainWindow.xaml  MainWindow.xaml.cs  NewAlbumDialog.xaml  NewAlbumDialog.xaml.cs  SelectAlbumDialog.xaml  SelectAlbumDialog.xaml.cs
CalcChat/: CalcChat.sln
CalcChat/CalcChat/: App.xaml  App.xaml.cs  ChatHistory.xml  ClientConnectWindow.xaml  ClientConnectWindow.xaml.cs  Entry.cs  Grammatik.txt  MSG.cs  MainWindow.xaml  MainWindow.xaml.cs  Parser.cs  Receiver.cs  Server.cs  ServerReciever.cs  Token.cs  Tokenizer.cs  Transfer.cs
CalculatorWPF2/: CalculatorWPF.csproj  CalculatorWPF.sln  ClassDiagram1.cd  MainWindow.xaml  MainWindow.xaml.cs  Parser.cs  Token.cs  Tokenizer.cs
CalculatorWPF2/Expressions/: Bracket.cs  Expression.cs  Literal.cs  Operator.cs  (+4 more)
DBDEMO/: DBDEMO.sln
Flugplaner/: CMakeLists.txt  flightplaner.qrc
Flugplaner/src/: airline.cpp  airline.h  airport.cpp  airport.h  alliance.cpp  alliance.h  dbmanager.cpp  dbmanager.h  flight.cpp  flight.h  flightmap.cpp  flightmap.h  flightplaner.cpp  flightplaner.h  flightplaner.ui  main.cpp
Formel1/: Formel1.pro  constructors.cpp  constructors.h  drivers.cpp  drivers.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  races.cpp  races.h  results.cpp  results.h
Formel1_V/: Formel1.pro  constructors.cpp  constructors.h  drivers.cpp  drivers.h  export.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nationality.cpp  nationality.h  results.cpp  results.h
Geoguesser/: Geoguesser.sln
IP_Graph/: IP_Graph.sln
MathLibrary/: MathLibrary.sln
OrmAirports/: OrmAirports.pro  airline.cpp  airline.h  airport.cpp  airport.h  alliance.cpp  alliance.h  export.h  mainwindow.cpp  mainwindow.ui
Osterhase/: Osterhase.sln
Osterhase2/: Osterhase2.sln
PA1/: .gitignore  PA1.db  PA1.pro  dbmanager.cpp  dbmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  picturewidget.cpp  picturewidget.h  picturewidget.ui
PA2-UE-Interpreter/: PA2-UE-Interpreter.sln  Programm2.txt
PA2_5B_C++/: README.txt
PA2_QT/: PA2_QT.pro  export.h
PA3N_5B/: PA3N_5B.sln
PA3_5BHIF/: PA3_5BHIF_adr.sln
PA3_Klauninger/: App.xaml  App.xaml.cs  Cell.cs  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  PA3_Klauninger.csproj  PA3_Klauninger.sln  TransferManager.cs  database.json  generate.cmd  words.db
PA3_UE/: PA3_UE.sln
PA_3_UE_Server/: PA_3_UE_Server.sln
QxOrm/: QxOrm.pro
SchiffeVersenken/: SchiffeVersenken.sln
Taschenrechner/: Taschenrechner.sln
TaschenrechnerWPF/: TaschenrechnerWPF.sln  grammar.txt
TinyExif/: TinyExif.pro
TinyExif2/: TinyExif2.pro  TinyExif2_global.h  tinyexif2.cpp  tinyexif2.h
TinyXml2Lib/: CMakeLists.txt
UPNRechner/: UPNRechner.sln
WpfChat/: WpfChat.sln
XMLExplorer/: .gitignore  CMakeLists.txt
XMLExplorer/src/: XMLExplorer.cpp  XMLExplorer.h  XMLExplorer.ui  main.cpp
build-test2-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  test2
pa1_ue_flight/: dbmanager.cpp  dbmanager.h  mainwindow.h  mainwindow.ui  map.cpp  map.h  map.ui  models.h  pa1_ue_flight.pro
pa1_ue_xml/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pa1_ue_xml.pro
roboter/: grammar.txt  program.txt  program2.txt  roboter.sln
test/: CMakeLists.txt
test/include/: UPNRechner.h
test/src/: UPNRechner.cpp  main.cpp
test2/: CMakeLists.txt
test2/src/: UPNRechner.cpp  UPNRechner.h  main.cpp
(+327 files in other folders)
